...

interface LoginFormProps {
  onFormSuccess: (data: UserLogin) => Promise<void>;
  testID?: string;
}

export const LoginForm = ({
  testID = 'LoginForm',
  onFormSuccess,
}: LoginFormProps) => {
  const passwordInputRef = useRef<TextInput>(null);

  const { t } = useTranslation();
...
