...
              autoCorrect={false}
              error={fieldState.error?.message}
              keyboardType="email-address"
              label={t('miscScreens.dummyForm.form.email.label')}
              placeholder={t('miscScreens.dummyForm.form.email.placeholder')}
              returnKeyType="next"
              testID="dummyForm-input-email"
              value={value}
              onBlur={onBlur}
              onChangeText={onChange}
              onSubmitEditing={() => {
                firstNameInputRef.current?.focus();
              }}
...
            />
          )}
        />
      </Box>

      <Button.Text
        testID="dummyForm-submitCta"
        onPress={handleSubmit(onSubmit) as (arg: unknown) => Promise<unknown>}
      >
        {t('miscScreens.dummyForm.cta')}
      </Button.Text>
    </>
  );
...
